--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,4 @@
 {
-    "/css/bootstrap.js": "/css/bootstrap.js",
-    "/js/app.js": "/js/app.js",
+    "/js/main.js": "/js/main.js",
     "/css/app.css": "/css/app.css"
 }
