--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,14 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "ext-json": "*",
         "fideloper/proxy": "^4.0",
+        "guzzlehttp/guzzle": "6.3.3",
         "laravel/framework": "5.8.*",
+        "laravel/socialite": "^4.1",
         "laravel/tinker": "^1.0",
+        "laravelcollective/html": "5.8.*",
+        "socialiteproviders/vkontakte": "^4.0",
         "waavi/sanitizer": "~1.0"
     },
     "require-dev": {
