--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "moment": "^2.24.0",
+        "vue-axios": "^2.1.4",
         "vue-loading-overlay": "^3.2.0",
         "vue-router": "^3.0.6",
+        "vue-social-auth": "^1.4.0",
         "vuex": "^3.1.0"
     }
 }
